--- a/pageSignIn.css
+++ b/pageSignIn.css
@@ -1,31 +1,46 @@
-/* setam ceva by default pt tot continutul paginii */ 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
+
 /* toate partile din body vor avea by default urmatoarele particularitati */
-body{
-    background-image: url("graficAlb.png");
+
+body {
+    background-image: url("space.png");
+    background-repeat: no-repeat;
+    overflow: auto;
+    height: auto;
+    min-height: 100% !important;
+    background-size: cover;
     margin: 0;
     font-family: Bookman;
-    font-size:14px;
+    font-size: 14px;
     color: #001620;
 }
+
+
 /* seteaza un max width si o incadrare de 100% pt partea de sus cu meniul si sigla */
-.center{
+
+.center {
     max-width: 1180px;
     margin: 0 auto;
     width: 100%;
 }
+
 /* marginile in care sta meniul si sigla, gen dunga aia de dedesupt */
-.header-wrapper{
-   padding: 30px 0;
+
+.header-wrapper {
+    background-color: white;
+    padding: 30px 0;
     border-bottom: 2px solid #001620;
 }
-
+.logo{
+    height: 70px;
+    width: 150px;   
+}
 /* referitoare la logo TeaSK din stanga sus.. aici se va inlocui cu logo-ul din Illustator*/
+
 .header-left .logo {
     font: italic bold 30px Bookman;
     text-shadow: -2px 1px 0 #FBEADD, -10px 5px 0 hsla(0, 39%, 81%, 0.363);
@@ -33,71 +48,96 @@ body{
     letter-spacing: 3px;
     color: #001620;
 }
+
 /* setam cum vor fi afisate logoul, si butoanele din menu, alea de sus */
+
 header{
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
 }
 /*setam unde si cum vor sta butoanele de search: articolele sunt impachetate spre sfarsitul liniei (flex-end) */
+
 .header-right{
     flex-grow: 1;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 /*aici avem clasa care cuprinde toate butoanele de menu, un fel de by default pt toate*/
+
 .main-nav {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
+
+
 /*fiecare buton ii intre tagurile li, pt toate setez initial margin right, ca sa apara departarea aia de dupa buton, inainte de urmatorul*/
+
 .main-nav li {
     margin-right: 20px;
 }
+
 /* pt ultimul buton din lista, nu voi mai pune acea margine drapta pt ca el nu mai are de cine sa stea departat */
-.main-nav li:last-of-type{
+
+.main-nav li:last-of-type {
     margin-right: 0;
 }
+
 /*aici setam detaliile pt ceea ce se afla in buton, gen culoarea textului, marimea fontului si stilul, alinierea etc */
-.main-nav li a{
+
+.main-nav li a {
     display: block;
     color: #001620;
     text-transform: uppercase;
-    padding : 13px;
+    padding: 13px;
     font-size: 13px;
-    font-weight: bold; 
+    font-weight: bold;
     border-radius: 5px;
-    transition: background-color 0.25s ease, color 0.25s ease; /*cat de repede se schimba culoarea textului cand ne pozitionam pe el*/
+    transition: background-color 0.25s ease, color 0.25s ease;
+    /*cat de repede se schimba culoarea textului cand ne pozitionam pe el*/
 }
+
 /*setari pt atunci cand suntem pe pagina corespunzatoare butonului, gen deja am dat click*/
- .main-nav li.active a {
+
+.main-nav li.active a {
     background: #040f14;
     color: #FBEADD;
     border-radius: 5px;
 }
+
 /*setari pt atunci cand ne ducem cu mouse-ul peste buton*/
+
 .main-nav li a:hover {
     background: rgba(29, 38, 43, 0.308);
     color: #08141a;
     border-radius: 5px;
 }
+
 /* butonul de serch e ultimul, pt el nu o sa mai avem hover backgroung si altele*/
- .main-nav li:last-of-type a:hover{
+
+.main-nav li:last-of-type a:hover {
     background: none;
 }
+
 /* pt ultimul buton (search) nu vom mai avea nici setare pt atunci cand e activ*/
-.main-nav li:last-of-type.active a{
+
+.main-nav li:last-of-type.active a {
     background: none;
-}  
+}
+
 /* butonul de search, gen cerculetul initial*/
-form{
+
+form[name="lupa"] {
     position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     transition: all 0.25s;
     width: 40px;
     height: 40px;
@@ -107,8 +147,10 @@ form{
     border: 2px solid #040f14;
     padding: 5px;
 }
+
 /* ne referim aici la setari pt acel Serch din interiorul casutei de search, si mai apoi la texul pe care noi il vom introduce*/
-input[name="Search"]{
+
+input[name="Search"] {
     position: absolute;
     top: 0;
     left: 0;
@@ -122,8 +164,10 @@ input[name="Search"]{
     border-radius: 25px;
     padding: 0 25px;
 }
+
 /* detalii pt lupa aia mica din interiorul cerculetului */
-.fa{
+
+.fa {
     box-sizing: border-box;
     padding: 10px;
     width: 35px;
@@ -137,27 +181,36 @@ input[name="Search"]{
     font-size: 1.2em;
     transition: all 0.25s;
 }
+
 /* cand mergem pe butonul de search cu mouseul se extinde la 200px */
-form:hover{
+
+form[name="lupa"]:hover {
     width: 200px;
-    cursor: pointer; /* gen cum arata mouse-ul cand esti pe linia searchului, e manuta aia de pointeaza */
+    cursor: pointer;
+    /* gen cum arata mouse-ul cand esti pe linia searchului, e manuta aia de pointeaza */
 }
-form:hover input{
+
+form[name="lupa"]:hover input {
     display: block;
 }
+
 /* in momentul in care extindem cerculetul de search se schimba culoarea cercului si a lupei din interior, gen cand sunem cu mouseul pe el */
-form:hover .fa{
+
+form[name="lupa"]:hover .fa {
     background: #040f14;
     color: white;
 }
+
 /* pozitia si cum va fi afisat meniul acela dropdown cand ne ducem cu mouse ul pe butoanele care il au gen recommendations*/
+
 .dropdown {
     position: relative;
     display: inline-block;
-  }
-  
-  /* continutul meniului dropdown (care va fi ascuns by default) */
-  .dropdown-content {
+}
+
+/* continutul meniului dropdown (care va fi ascuns by default) */
+
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: rgba(241, 241, 241, 0.767);
@@ -165,128 +218,188 @@ form:hover .fa{
     overflow: auto;
     box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.534);
     z-index: 1;
-  }
-  
-  /* link-urile din meniul dropdown, cum arata, culoare etc */
-  .dropdown-content a {
+}
+
+/* link-urile din meniul dropdown, cum arata, culoare etc */
+
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
-/* culoare pt link urile din dropdown menu, cand treci cu mouse pe ele*/
-  .dropdown-content a:hover {background-color: rgb(36, 14, 14);}
+}
+
+.dropdown-content a:hover {
+    background-color: rgb(36, 14, 14);
+}
 
 /* modul in care apare meniul extins, block */
-.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
 /* culoarea butonului initial care se schimba atunci cand suntem pe el si se afiseaza meniiul dropdown */
-.dropdown:hover  { background: rgba(4, 15, 20, 0.637);
-    color:rgb(5, 5, 5);
-    border-radius: 5px;}
-    
+
+.dropdown:hover {
+    background: rgba(4, 15, 20, 0.637);
+    color: rgb(5, 5, 5);
+    border-radius: 5px;
+}
 
 /* bara de scroll, ii luata de pe net, astea is detaliile ei care urmeaza */
-::-webkit-scrollbar-track{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
-}
-::-webkit-scrollbar
-{
-	width: 10px;
-	background-color: #F5F5F5;
-}
-::-webkit-scrollbar-thumb
-{
-	background-color: #000000;
-	border: 2px solid #555555;
+/* mie, Amalia Damoc-Simon nu imi merge chestiuta asta*/
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
 }
 
-/*partea de caseta de sign in */
-
-.welcomebox {
-    margin: 0px 15px;
-    border: 3px solid;
-    border-color: #001620;
-    height: 450px;
-    width: 50%;
-    padding: 16px;
-    position: absolute;
-    top: 30%;
-    left: 25%;
-    position: fixed;
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
 }
-.welcomebox > h1 {
+
+::-webkit-scrollbar-thumb {
+    background-color: #000000;
+    border: 2px solid #555555;
+}
+
+
+
+*, *:before, *:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  
+  
+  form[name="formular"]{
+    max-width: 300px;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background: rgba(244, 247, 248, 0.39);
+   
+  }
+  
+  h1 {
+    margin: 0 0 20px 0;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+  }
+  p{
+      text-align: center;
+      margin: 0 0 30px 0;
+      font-weight: bold;
+      font-size: 20px;
+  }
+  
+  input[name="user_name"],
+  input[name="user_password"],
+  textarea,
+  select {
+    background: rgba(255,255,255,0.1);
+    border: none;
+    font-size: 16px;
     font-weight: bold;
+    height: auto;
+    margin: 0;
+    outline: 0;
+    padding: 15px;
+    width: 100%;
+    background-color: #e8eeef;
+    color: #2b2e31;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    margin-bottom: 30px;
+  }
+  
+  input[type="radio"]{
+      margin: 0px 10px 15px 0px;  
+  }
+
+  input[type="checkbox"] {
+    margin: 0 4px 8px 0;
+  }
+  
+  select {
+    padding: 6px;
+    height: 32px;
+    border-radius: 2px;
+  }
+  
+  .submit{
+    padding: 19px 39px 18px 39px;
+    color: #FFF;
+    background-color: #000000;
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+    border-radius: 5px;
+    width: 100%;
+    border: 1px solid #000000;
+    border-width: 1px 1px 3px;
+    box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
     margin-bottom: 10px;
-}
-.welcomebox > p {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+  }
+  .submit:hover{
+    background-color: rgba(0, 0, 0, 0.74)
+  }
+  
+  fieldset {
+    margin-bottom: 30px;
+    border: none;
+  }
+  
+  legend {
+    font-size: 1.4em;
+    margin-bottom: 10px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 8px;
     font-weight: bold;
-    margin-bottom: 20px;
-}
-
-input[name="uname"], input[name="psw"] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 10px 0;
-  position: relative;
-  display: block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  background-color:rgba(190, 185, 184, 0.562);
-  border-radius: 0%;
-} 
-
-
-.loginButton {
-  background-color: #000000;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-.loginButton:hover {
-  opacity: 0.8;
-}
-
-.signupbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: rgb(0, 0, 0);
-  margin-left: 5px;
-  color: white;
-  cursor: pointer;
-  margin-top: 20px;
-
-}
-.signupbtn:hover{
-    opacity: 0.8;
-}
-span.psw {
-  float: right;
-  padding-top: 16px;
-  margin-right:10px; 
-  margin-top: 20px;
-}
-.box {
+  }
+  
+ 
+  .signupbtn {
     width: auto;
-    background-color:transparent;
-}
-/* end partea de log in*/
-
-.footer{
-    background-image: url("grafic2.png");
-    color: #000;
-    padding:10px;
-    text-align: center;
-}
-
-
+    padding: 10px 18px;
+    background-color: rgb(0, 0, 0);
+    margin-left: 5px;
+    color: black;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  
+  }
+  .signupbtn:hover{
+      opacity: 0.8;
+  }
+  span.psw {
+    float: right;
+    padding-top: 16px;
+    margin-right:10px; 
+    margin-top: 20px;
+    font-weight: bold;
+    color: black;
+  }
+  span.psw > a{
+      color:black;
+  }
+  .footer{
+      background-color: white;
+      color:black;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      text-align: center;
+      padding: 10px;
+  }
+  
+  @media screen and (min-width: 480px) {
+  
+    form[name="formular"] {
+      max-width: 480px;
+    }
+  
+  }
