--- a/pageJobs.css
+++ b/pageJobs.css
@@ -344,49 +344,69 @@ label[name="titlu"]{
     background-repeat: no-repeat;
     background-size: cover;
     overflow: auto;
-    min-height: 530px;
     display: grid;
-
     grid-row-gap: 5%;
+    background-image: url("./resources/background/space3.png");
+    flex-wrap: wrap;
 }
 .grid {
     border:solid black 1px;
      margin-left: 5%;
      margin-right: 5%;
     margin-top: 5%;
-    height: auto;
-    display:flex;
+    background: rgba(0, 22, 32, 0.781);
+    color:white;
+    flex-wrap: wrap;
+}
+img[name="firma"]{
+    height: 30%;
+    width: 60%;
+    align-content: center;
+    margin-right: 20%;
+    margin-left: 20%;
+    margin-top: 1%;
+    margin-bottom: 2%;
+}
+.jobtitle{
+    text-align: center;
+    font-size: 150%;
+    margin-bottom: 1%;
+    margin-left:2%;
+    margin-right: 2%;
+    flex-wrap: wrap;
+}
+.jobdescription{
+    text-align: center;
+    font-size: 100%;
+    margin-left:2%;
+    margin-right: 2%;
+    margin-bottom: 1%;
+    padding: 2%;
+    flex-wrap: wrap;
+}
+
+.view{
+  
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color: rgba(41, 36, 36, 0.767);
+    font-size: 18px;
+    text-align: center;
+    width: 50%;
+    border: 1px solid #000000;
+    margin-top:1%;
+    margin-bottom: 0;
+    margin-left:25%;
+    margin-right: 25%;
+    cursor: pointer;
+    flex-wrap: wrap;
 }
 .grid-item1 {         
     grid-column: 1;
     grid-row: 1;
-    
- }
-.leftcont{
-    width: 40%;
-    border-right: #000 solid 1px;
-    overflow: auto;
 }
 
-.leftcont h1 {
-    text-align: center;
-    margin-bottom: 7%;
-    margin-top: 5%;
-}
-.leftcont .logo {
-    background-image: url("./resources/firme/Bit.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    margin-left:10%;
-    margin-right: 10%;
-}
-.logo{
-    height: 100px;
-    width: 100px;
-}
-.rightcont{
-    width: 60%;
-}
 .grid-item2 {      
     
     grid-column: 2;
@@ -394,23 +414,23 @@ label[name="titlu"]{
 }
 
 .grid-item3 {      
-    grid-column: 1;
-    grid-row: 2;
+    grid-column: 3;
+    grid-row: 1;
 }
 
 .grid-item4 {      
+    grid-column: 1;
+    grid-row: 2;
+}
+.grid-item5 {      
     grid-column: 2;
     grid-row: 2;
 }
-/* .grid-item5 {      
-    grid-column: 1;
-    grid-row: 3;
-}
 
 .grid-item6 {      
-    grid-column: 2;
-    grid-row: 3;
-} */
+    grid-column: 3;
+    grid-row: 2;
+} 
 
 
 
@@ -429,4 +449,54 @@ label[name="titlu"]{
       width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
     }
   }
+@media screen and (max-width=600px){
+    header {
+        flex-direction: column;
+    }
+    .main-nav{
+        flex-direction: column;
+    }
+    button[type="submit"]{
+        display: block;
+        cursor: pointer;
+    }
+    input[type="text"]{
+        display: block;
+    }
+    .searchform{
+        width:200px;
+        cursor: pointer;
+    }
+    .main-nav li {
+        margin-right: 0px;
+    }
+    .grid-item1 {      
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .grid-item2 {      
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .grid-item3 {      
+        grid-column: 1;
+        grid-row: 3;
+    }
+    .grid-item4 {      
+        grid-column: 1;
+        grid-row: 4;
+    }
+    .grid-item5 {      
+        grid-column: 1;
+        grid-row: 5;
+    }
+    .grid-item6 {      
+        grid-column: 1;
+        grid-row: 6;
+    }
 
+
+}
+ul * {
+    text-align: center;
+}
