--- a/firstPageNoLog.css
+++ b/firstPageNoLog.css
@@ -208,7 +208,7 @@ form:hover .fa{
 }
 /*fundal si restul pt continut */
 .content{
-    background-image: url("./resources/background/space.png");
+    background-image: url("./resources/background/space2.png");
     background-repeat: no-repeat;
     overflow: auto;
     height: auto;
@@ -257,10 +257,10 @@ form:hover .fa{
 
 /*fundal si restul pt continut 2 */
 .content2{
-    background-color:white;
+    background-color:#343246;
+    background-image: url("./resources/background/space2.png");
     background-repeat: no-repeat;
     overflow: auto;
-    height: auto;
     background-size: cover;
     min-height: 530px;
     width:100%;
@@ -291,7 +291,7 @@ form:hover .fa{
 /*fundal si restul pt continut 3 */
 .content3{
     background-color:#343246;
-    background-image: url("./resources/background/space3.png");
+    background-image: url("./resources/background/space2.png");
     background-repeat: no-repeat;
     overflow: auto;
     height: auto;
@@ -322,6 +322,117 @@ form:hover .fa{
     color: white;
 
 }
+
+.grid-container{
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: auto;
+    display: grid;
+    grid-row-gap: 5%;
+    background-image: url("./resources/background/space2.png");
+    flex-wrap: wrap;
+}
+.grid {
+    border:solid black 1px;
+     margin-left: 5%;
+     margin-right: 5%;
+    margin-top: 5%;
+    background: rgba(0, 22, 32, 0.781);
+    color:white;
+    flex-wrap: wrap;
+}
+img[name="firma"]{
+    height: 30%;
+    width: 60%;
+    align-content: center;
+    margin-right: 20%;
+    margin-left: 20%;
+    margin-top: 1%;
+    margin-bottom: 2%;
+}
+.jobtitle{
+    text-align: center;
+    font-size: 150%;
+    margin-bottom: 1%;
+    margin-left:2%;
+    margin-right: 2%;
+    flex-wrap: wrap;
+}
+.jobdescription{
+    text-align: center;
+    font-size: 100%;
+    margin-left:2%;
+    margin-right: 2%;
+    margin-bottom: 1%;
+    padding: 2%;
+    flex-wrap: wrap;
+}
+
+.eventtitle{
+    text-align: center;
+    font-size: 150%;
+    margin-bottom: 1%;
+    margin-left:2%;
+    margin-right: 2%;
+    flex-wrap: wrap;
+}
+.eventdescription{
+    text-align: center;
+    font-size: 100%;
+    margin-left:2%;
+    margin-right: 2%;
+    margin-bottom: 1%;
+    padding: 2%;
+    flex-wrap: wrap;
+}
+
+.view{
+  
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color: rgba(41, 36, 36, 0.767);
+    font-size: 18px;
+    text-align: center;
+    width: 50%;
+    border: 1px solid #000000;
+    margin-top:1%;
+    margin-bottom: 0;
+    margin-left:25%;
+    margin-right: 25%;
+    cursor: pointer;
+    flex-wrap: wrap;
+}
+.grid-item1 {         
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.grid-item2 {      
+    
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.grid-item3 {      
+    grid-column: 3;
+    grid-row: 1;
+}
+
+
+.grid-item4 {      
+    grid-column: 1;
+    grid-row: 2;
+}
+.grid-item5 {      
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.grid-item6 {      
+    grid-column: 3;
+    grid-row: 2;
+} 
 
 /* bara de scroll, ii luata de pe net, astea is detaliile ei care urmeaza */
 ::-webkit-scrollbar-track{
