--- a/pageJobs.css
+++ b/pageJobs.css
@@ -345,6 +345,9 @@ label[name="titlu"]{
     background-size: cover;
     overflow: auto;
     display: grid;
+    grid-template-columns: 30% 30% 30%;
+    grid-template-rows: auto;
+    justify-content: center;
     grid-row-gap: 5%;
     background-image: url("./resources/background/space3.png");
     flex-wrap: wrap;
@@ -402,39 +405,7 @@ img[name="firma"]{
     cursor: pointer;
     flex-wrap: wrap;
 }
-.grid-item1 {         
-    grid-column: 1;
-    grid-row: 1;
-}
-
-.grid-item2 {      
-    
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.grid-item3 {      
-    grid-column: 3;
-    grid-row: 1;
-}
-
-.grid-item4 {      
-    grid-column: 1;
-    grid-row: 2;
-}
-.grid-item5 {      
-    grid-column: 2;
-    grid-row: 2;
-}
-
-.grid-item6 {      
-    grid-column: 3;
-    grid-row: 2;
-} 
-
-
-
-
+ 
 .footer{
     background-color: white;
     color: #000;
@@ -449,7 +420,7 @@ img[name="firma"]{
       width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
     }
   }
-@media screen and (max-width=600px){
+@media screen and (max-width: 600px){
     header {
         flex-direction: column;
     }
@@ -470,31 +441,19 @@ img[name="firma"]{
     .main-nav li {
         margin-right: 0px;
     }
-    .grid-item1 {      
-        grid-column: 1;
-        grid-row: 1;
-    }
-    .grid-item2 {      
-        grid-column: 1;
-        grid-row: 1;
-    }
-    .grid-item3 {      
-        grid-column: 1;
-        grid-row: 3;
-    }
-    .grid-item4 {      
-        grid-column: 1;
-        grid-row: 4;
-    }
-    .grid-item5 {      
-        grid-column: 1;
-        grid-row: 5;
-    }
-    .grid-item6 {      
-        grid-column: 1;
-        grid-row: 6;
-    }
 
+    .grid-container{
+        background-repeat: no-repeat;
+        background-size: cover;
+        overflow: auto;
+        display: grid;
+        grid-template-columns: 90%;
+        grid-template-rows: auto;
+        justify-content: center;
+        grid-row-gap: 5%;
+        background-image: url("./resources/background/space3.png");
+        flex-wrap: wrap;
+    }
 
 }
 ul * {
