--- a/pageProfile.css
+++ b/pageProfile.css
@@ -218,77 +218,63 @@ form:hover .fa{
 .container{
     flex-wrap: wrap;
     border: solid black 1px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-areas: "bio details details details details"
+    "chart chart chart chart chart"
+    "exp exp . edu edu";
     position: relative; 
     width:100%;
-    background-repeat: no-repeat;
-    overflow: auto;
     height: auto;
     min-height: 100% !important;
-    background-size: cover;
+    background-image: url(./resources/background/space3.png);
+    background-repeat: no-repeat;
+    overflow: hidden;
    
 }
-.contentLeft{
+.bio{
+    grid-area: bio;
     flex-wrap: wrap;
-    border: solid white 2px;
-    width: 20%;
+    border: solid gray 2px;
     float:left;
     min-height: 530px;
     color: white;
     font-weight: bold;
     margin-bottom: 20px;
-    background-image: url(./resources/background/space3.png);
-    background-repeat: no-repeat;
-    overflow: auto;
     height: auto;
-    min-height: 100% !important;
+    /* min-height: 100% !important; */
     background-size: cover;
 
 }
-.contentLeft > h1 {
+.bio > h1 {
     text-align: center;
     margin-top: 10px;
 }
 .user{
     height: 120px;
     width: 120px;
-    margin-left: 35%;
-    margin-top:10px;
-
+    /* margin-left: 35%;
+    margin-top:10px; */
+    margin: 0 auto;
+    display: block;
 }
-.contentLeft > p {
+.bio > p {
     text-align: center;
     margin-top: 10px;
 }
 
-.contentRight{
-    flex-wrap: wrap;
-    width: 80% !important;
-    min-height: 530px;
-    background-image: url(./resources/background/space3.png);
-    display: grid;
-    background-repeat: no-repeat;
-    overflow: auto;
-    height: auto;
-    min-height: 100% !important;
-    background-size: cover;
-
-}
-.about{
-    grid-row: 1;
-    margin-top: 20px;
+.details{
+    grid-area: details;
     margin-bottom: 20px;
     border: solid grey 1px;
-    column-count: 4;
+    column-count: 2;
     align-items: center;
     column-gap: 10px;
-    height: 100%;
-    width: 80%;
     padding: 40px;
     background: rgba(219, 215, 215, 0.479)
 
 }
-.about > h1{
+.details > h1{
     background: rgba(212, 206, 206, 0.493);
     border-bottom: 1px;
     text-transform: uppercase;
@@ -296,28 +282,23 @@ form:hover .fa{
     margin-bottom: 10px;
     column-span: all;
 }
-.about > p{
+.details > p{
     margin-right: 20px;
     font-size: 20px;
 }
-.expedu-wrapper{
-    margin-left: 5%;
-    margin-right: 5%;
-    border: solid grey 1px;
-    grid-row: 3;
-    width: 80%;
-}
-.experience{
+
+.exp{
+    grid-area: exp;
     float:left;
     margin-top: 20px;
-    margin-left: 30px;
+    /* margin-left: 30px; */
     border: solid grey 1px;
     height: 100%;
     width: auto;
     padding: 30px;
     background: rgba(219, 215, 215, 0.479)
 }
-.experience > h1{
+.exp > h1{
     background: rgba(212, 206, 206, 0.493);
     border-bottom: 1px;
     text-transform: uppercase;
@@ -326,21 +307,22 @@ form:hover .fa{
     column-span: all;
 }
 
-.experience .position {
+.exp .position {
     text-align: center;
     font-weight: bold;
     font-size:20px;
 }
 
-.experience .period {
+.exp .period {
     text-align: center;
     font-size:15px;
     margin-bottom: 10px;
 }
-.education{
+.edu{
+    grid-area: edu;
     float:right;
     margin-top: 20px;
-    margin-right: 30px;
+    /* margin-right: 30px; */
     border: solid grey 1px;
     height: 100%;
     width: auto;
@@ -348,7 +330,7 @@ form:hover .fa{
     background: rgba(219, 215, 215, 0.479)
 }
 
-.education > h1{
+.edu > h1{
     background: rgba(212, 206, 206, 0.493);
     border-bottom: 1px;
     text-transform: uppercase;
@@ -357,28 +339,27 @@ form:hover .fa{
     column-span: all;
 }
 
-.education .college {
+.edu .college {
     text-align: center;
     font-weight: bold;
     font-size:20px;
 }
 
-.skills-wrapper{
-    width: 65%;
+.chart{
     padding-left: 10%;
-    margin-right: 10%;
+    /* margin-right: 10%;
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 5%; */
     background: rgba(219, 215, 215, 0.479);
-    grid-row: 2;
+    grid-area: chart;
 }
 
-.skills-wrapper h1 {
+.chart h1 {
     text-align: center;
     text-transform: uppercase;
     margin-top: auto;  
 }
-.skills-wrapper h2{
+.chart h2{
     text-align: left;   
 }
 .line{
@@ -452,4 +433,49 @@ form:hover .fa{
       height: auto;
     }
   }
+
+  @media screen and (max-width: 600px){
+    header {
+        flex-direction: column;
+    }
+    .main-nav{
+        flex-direction: column;
+    }
+    button[type="submit"]{
+        display: block;
+        cursor: pointer;
+    }
+    input[type="text"]{
+        display: block;
+    }
+    .searchform{
+        width:200px;
+        cursor: pointer;
+    }
+    .main-nav li {
+        margin-right: 0px;
+    }
+    .container{
+        border: solid black 1px;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-areas: "bio"
+        "details"
+        "chart"
+        "exp"
+        "edu";
+        position: relative; 
+        width:100%;
+        height: auto;
+        min-height: 100% !important;
+        background-image: url(./resources/background/space3.png);
+        background-repeat: no-repeat;
+        overflow: hidden;
+        background-size: cover;
+    }
+
+}
+ul * {
+    text-align: center;
+}
 
