--- a/firstPageLoggedin.css
+++ b/firstPageLoggedin.css
@@ -306,6 +306,7 @@ background-color: rgba(196, 196, 196, 0.5);
     grid-row-gap: 5%;
     background-image: url("./resources/background/space2.png");
     flex-wrap: wrap;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 .grid {
     border:solid black 1px;
@@ -378,36 +379,6 @@ img[name="firma"]{
     cursor: pointer;
     flex-wrap: wrap;
 }
-.grid-item1 {         
-    grid-column: 1;
-    grid-row: 1;
-}
-
-.grid-item2 {      
-    
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.grid-item3 {      
-    grid-column: 3;
-    grid-row: 1;
-}
-
-
-.grid-item4 {      
-    grid-column: 1;
-    grid-row: 2;
-}
-.grid-item5 {      
-    grid-column: 2;
-    grid-row: 2;
-}
-
-.grid-item6 {      
-    grid-column: 3;
-    grid-row: 2;
-} 
 
 /*fundal si restul pt continut 2 */
 .content3{
@@ -479,3 +450,41 @@ img[name="firma"]{
     }
   }
 
+@media screen and (max-width: 600px){
+    header {
+        flex-direction: column;
+    }
+    .main-nav{
+        flex-direction: column;
+    }
+    button[type="submit"]{
+        display: block;
+        cursor: pointer;
+    }
+    input[type="text"]{
+        display: block;
+        width: 200px;
+        cursor: pointer;
+    }
+    .searchform{
+        width:200px;
+        cursor: pointer;
+    }
+    .main-nav li {
+        margin-right: 0px;
+    }
+
+    .grid-container{
+        background-repeat: no-repeat;
+        background-size: cover;
+        overflow: auto;
+        display: grid;
+        grid-template-columns: 90%;
+        grid-template-rows: auto;
+        justify-content: center;
+        grid-row-gap: 5%;
+        background-image: url("./resources/background/space3.png");
+        flex-wrap: wrap;
+    }
+
+}
