--- a/views/styles/firstPageNoLog.css
+++ b/views/styles/firstPageNoLog.css
@@ -1,5 +1,5 @@
 /* formatare text de sub bara de meniu*/
-.sub-header{
+.sub-header {
     height: 50px;
     margin: 0 auto;
     padding: 20px 0;
@@ -9,25 +9,23 @@
     text-transform: uppercase;
     padding-top: 20px;
     padding-bottom: 10px;
-
 }
 /* box-ul care cuprinde content-ul*/
 .container {
     border: solid black 1px;
     display: block;
     position: relative;
-    width:auto;
-
+    width: auto;
 }
 /*fundal si restul pt continut */
-.content{
+.content {
     background-image: url("../resources/background/space2.png");
     background-repeat: no-repeat;
     overflow: auto;
     height: auto;
     background-size: cover;
     min-height: 530px;
-    width:100%;
+    width: 100%;
     display: block;
     position: relative;
 }
@@ -40,18 +38,18 @@
     padding: 5px;
     margin-top: 2px;
     font-weight: bold;
-   border-top-left-radius: 30px; 
-   border-top-right-radius: 30px; 
-   text-transform: uppercase; 
-} 
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    text-transform: uppercase;
+}
 /*text gen paragraf, mica descriere ceva dupa titlu daca vrem sa punem*/
 .content > p {
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
-    margin-top:100px;
-    color:white;
+    margin-top: 100px;
+    color: white;
     font-size: 40px;
 }
 .content .success {
@@ -59,24 +57,23 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
-    margin-top:30px;
-    color:white;
+    margin-top: 30px;
+    color: white;
     font-size: 70px;
 }
 .content .intro {
     margin-bottom: 40px;
 }
 
-
 /*fundal si restul pt continut 2 */
-.content2{
-    background-color:#343246;
+.content2 {
+    background-color: #343246;
     background-image: url("../resources/background/space2.png");
     background-repeat: no-repeat;
     overflow: auto;
     background-size: cover;
     min-height: 530px;
-    width:100%;
+    width: 100%;
     display: block;
     position: relative;
 }
@@ -89,28 +86,27 @@
     padding: 5px;
     margin-top: 2px;
     font-weight: bold;
-   border-top-left-radius: 30px; 
-   border-top-right-radius: 30px; 
-   text-transform: uppercase; 
-} 
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    text-transform: uppercase;
+}
 /*text gen paragraf, mica descriere ceva dupa titlu daca vrem sa punem*/
 .content2 > p {
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-
 }
 
 /*fundal si restul pt continut 3 */
-.content3{
-    background-color:#343246;
+.content3 {
+    background-color: #343246;
     background-image: url("../resources/background/space2.png");
     background-repeat: no-repeat;
     overflow: auto;
     height: auto;
     background-size: cover;
     min-height: 530px;
-    width:100%;
+    width: 100%;
     display: block;
     position: relative;
 }
@@ -123,20 +119,19 @@
     padding: 5px;
     margin-top: 2px;
     font-weight: bold;
-   border-top-left-radius: 30px; 
-   border-top-right-radius: 30px; 
-   text-transform: uppercase; 
-} 
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    text-transform: uppercase;
+}
 /*text gen paragraf, mica descriere ceva dupa titlu daca vrem sa punem*/
 .content3 > p {
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: white;
-
 }
 
-.grid-container{
+.grid-container {
     background-repeat: no-repeat;
     background-size: cover;
     overflow: auto;
@@ -146,15 +141,15 @@
     flex-wrap: wrap;
 }
 .grid {
-    border:solid black 1px;
-     margin-left: 5%;
-     margin-right: 5%;
+    border: solid black 1px;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 5%;
     background: rgba(0, 22, 32, 0.781);
-    color:white;
+    color: white;
     flex-wrap: wrap;
 }
-img[name="firma"]{
+img[name="firma"] {
     height: 30%;
     width: 60%;
     align-content: center;
@@ -163,45 +158,44 @@ img[name="firma"]{
     margin-top: 1%;
     margin-bottom: 2%;
 }
-.jobtitle{
+.jobtitle {
     text-align: center;
     font-size: 150%;
     margin-bottom: 1%;
-    margin-left:2%;
+    margin-left: 2%;
     margin-right: 2%;
     flex-wrap: wrap;
 }
-.jobdescription{
+.jobdescription {
     text-align: center;
     font-size: 100%;
-    margin-left:2%;
+    margin-left: 2%;
     margin-right: 2%;
     margin-bottom: 1%;
     padding: 2%;
     flex-wrap: wrap;
 }
 
-.eventtitle{
+.eventtitle {
     text-align: center;
     font-size: 150%;
     margin-bottom: 1%;
-    margin-left:2%;
+    margin-left: 2%;
     margin-right: 2%;
     flex-wrap: wrap;
 }
-.eventdescription{
+.eventdescription {
     text-align: center;
     font-size: 100%;
-    margin-left:2%;
+    margin-left: 2%;
     margin-right: 2%;
     margin-bottom: 1%;
     padding: 2%;
     flex-wrap: wrap;
 }
 
-.view{
-  
-    color: #FFF;
+.view {
+    color: #fff;
     text-transform: uppercase;
     font-weight: bold;
     background-color: rgba(41, 36, 36, 0.767);
@@ -209,71 +203,66 @@ img[name="firma"]{
     text-align: center;
     width: 50%;
     border: 1px solid #000000;
-    margin-top:1%;
+    margin-top: 1%;
     margin-bottom: 0;
-    margin-left:25%;
+    margin-left: 25%;
     margin-right: 25%;
     cursor: pointer;
     flex-wrap: wrap;
 }
-.grid-item1 {         
+.grid-item1 {
     grid-column: 1;
     grid-row: 1;
 }
 
-.grid-item2 {      
-    
+.grid-item2 {
     grid-column: 2;
     grid-row: 1;
 }
 
-.grid-item3 {      
+.grid-item3 {
     grid-column: 3;
     grid-row: 1;
 }
 
-
-.grid-item4 {      
+.grid-item4 {
     grid-column: 1;
     grid-row: 2;
 }
-.grid-item5 {      
+.grid-item5 {
     grid-column: 2;
     grid-row: 2;
 }
 
-.grid-item6 {      
+.grid-item6 {
     grid-column: 3;
     grid-row: 2;
-} 
+}
 
 /* bara de scroll, ii luata de pe net, astea is detaliile ei care urmeaza */
-::-webkit-scrollbar-track{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
 }
-::-webkit-scrollbar
-{
-	width: 10px;
-	background-color: #F5F5F5;
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f5f5f5;
 }
-::-webkit-scrollbar-thumb
-{
-	background-color: #000000;
-	border: 2px solid #555555;
+::-webkit-scrollbar-thumb {
+    background-color: #000000;
+    border: 2px solid #555555;
 }
 
-.container::after{
+.container::after {
     content: " ";
     display: block;
     clear: both;
     *zoom: 1;
 }
 
-.footer{
+.footer {
     background-image: url("grafic2.png");
     color: #000;
-    padding:10px;
+    padding: 10px;
     text-align: center;
 }
-
