--- a/views/styles/pageSignUp.css
+++ b/views/styles/pageSignUp.css
@@ -16,12 +16,12 @@
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
 }
 
 ::-webkit-scrollbar {
     width: 10px;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -29,16 +29,17 @@
     border: 2px solid #555555;
 }
 
-
 /*padding-ul si border-ul vor fi incluse in width si height */
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-  }
-  
- /*suportul pe care sta formularul, chenarul lui adica*/
-form[name="formular"]{
+}
+
+/*suportul pe care sta formularul, chenarul lui adica*/
+form[name="formular"] {
     max-width: 300px;
     margin: 10px auto;
     padding: 10px 20px;
@@ -46,25 +47,25 @@ form[name="formular"]{
     min-width: 400px;
 }
 
-/* titlul formularului*/ 
+/* titlul formularului*/
 h1 {
     margin: 0 0 30px 0;
     text-align: center;
-  }
+}
 /* setarile pt casutele de introducere a informatiilor, inclusiv pt testul ce este introdus */
-  input[name="user_name"],
-  input[name="user_email"],
-  input[name="user_password"],
-  input[name="user_number"],
-  input[name="user_tel"],
-  input[name="user_url"],
-  input[name="user_occupation"],
-  input[name="user_company"],
-  input[name="user_country"],
-  input[name="user_city"],
-  textarea,
-  select {
-    background: rgba(255,255,255,0.1);
+input[name="user_name"],
+input[name="user_email"],
+input[name="user_password"],
+input[name="user_number"],
+input[name="user_tel"],
+input[id="user_url"],
+input[name="user_profession"],
+input[name="user_company"],
+input[name="user_country"],
+input[name="user_city"],
+textarea,
+select {
+    background: rgba(255, 255, 255, 0.1);
     border: none;
     font-size: 16px;
     font-weight: bold;
@@ -75,27 +76,27 @@ h1 {
     width: 100%;
     background-color: #e8eeef;
     color: #2b2e31;
-    box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 30px;
-  }
+}
 /*bulinutele de selectare optiune (de la Gender)*/
-  input[type="radio"]{
-      margin: 0px 10px 15px 0px;  
-  }
+input[type="radio"] {
+    margin: 0px 10px 15px 0px;
+}
 
-  input[type="checkbox"] {
+input[type="checkbox"] {
     margin: 0 4px 8px 0;
-  }
+}
 /*caseta meniului de unde se alege job role*/
-  select {
+select {
     padding: 6px;
     height: 32px;
     border-radius: 2px;
-  }
-  /*butonul de sign up de la finalul formularului */
-  .submit{
+}
+/*butonul de sign up de la finalul formularului */
+.submit {
     padding: 19px 39px 18px 39px;
-    color: #FFF;
+    color: #fff;
     background-color: #000000;
     font-size: 18px;
     text-align: center;
@@ -104,44 +105,44 @@ h1 {
     width: 100%;
     border: 1px solid #000000;
     border-width: 1px 1px 3px;
-    box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
     margin-bottom: 10px;
     cursor: pointer;
-  }
-  
-  .submit:hover{
-    background-color: rgba(0, 0, 0, 0.74)
-  }
+}
+
+.submit:hover {
+    background-color: rgba(0, 0, 0, 0.74);
+}
 /*spatierea dintre partile formularului*/
-  fieldset {
+fieldset {
     margin-bottom: 30px;
     border: none;
-  }
-  /*spatiu de dupa si font size pt subtitlurile partilor din formular*/
-  legend {
+}
+/*spatiu de dupa si font size pt subtitlurile partilor din formular*/
+legend {
     font-size: 1.4em;
     margin-bottom: 10px;
-  }
- /*titlul fiecarui camp de completare*/ 
-  label {
+}
+/*titlul fiecarui camp de completare*/
+label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
-  }
+}
 /*detalii pt textul fiecarei casute optiune la Interests*/
-  label.light {
+label.light {
     font-weight: 300;
     display: inline;
-  }
+}
 /*detalii pt textul fiecarei casute optiune la languages*/
-  label.light2 {
+label.light2 {
     font-weight: 300;
     display: inline-block;
     margin-top: 10px;
     margin-right: 15px;
-  }
+}
 /*bulina cu numarul partii din formular*/
-  .number {
+.number {
     background-color: #000000;
     color: #fff;
     height: 30px;
@@ -151,23 +152,21 @@ h1 {
     margin-right: 4px;
     line-height: 30px;
     text-align: center;
-    text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
     border-radius: 100%;
-  }
+}
 
-  .footer{
-      background-color: white;
-      color:black;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      text-align: center;
-      padding: 10px;
-  }
-  
-  @media screen and (min-width: 480px) {
-  
+.footer {
+    background-color: white;
+    color: black;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    padding: 10px;
+}
+
+@media screen and (min-width: 480px) {
     form[name="formular"] {
-      max-width: 480px;
+        max-width: 480px;
     }
-  
-  }
+}
